--- a/ERPWeb/Views/AgroConfiguration/GetRawMaterial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetRawMaterial.cshtml
@@ -16,7 +16,7 @@
                         <div class="row text-sm">
                             <div class="col-md-2">
                                 <h5 class=" text-bold float-left text-white">
-                                    Raw Material Setup
+                                    R.M Setup
                                 </h5>
                             </div>
                             <div class="col-md-2">
