--- a/ERPWeb/Views/AgroConfiguration/_GetRequisitionDetails.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRequisitionDetails.cshtml
@@ -7,7 +7,7 @@
 <div class="col-md-12">
 <table class="table table-bordered table-striped table-hover table-sm text-sm">
     <thead>
-        <tr class="text-sm btn-dark">
+        <tr class="text-sm btn-dark text-center">
             <th style="vertical-align:middle">#SL</th>
             <th style="vertical-align:middle">Raw Material Name</th>
             <th style="vertical-align:middle">Unit</th>
