--- a/ERPWeb/Views/AgroConfiguration/SalesPaymentCreate.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesPaymentCreate.cshtml
@@ -72,7 +72,7 @@
                             </div>
                             <div class="col-md-2">
                                 <label for="ddlAmount" class="control-label">Commision(%)</label>
-                                <input type="number" id="ddlAmount" class="form-control form-control-sm" />
+                                <input type="number" value="0" id="ddlAmount" class="form-control form-control-sm" />
                                 <span class="error hide req-ddlAmount font-weight-bold">Amount is required!</span>
                             </div>
 
@@ -129,6 +129,7 @@
         var divAccountNumber = $("#divAccountNumber");
         var ddlPaymentMode = $("#ddlPaymentMode");
         var ddlAccountNumber = $("#ddlAccountNumber");
+        var ddlAmount = $("#ddlAmount");
 
 
 
@@ -196,25 +197,25 @@
                  details.push({
                     //StockiestId: TryParseInt(ddlStokiestID.val(), 0),
                     //ProductSalesInfoId: TryParseInt(ddlInvoiceNo.val(), 0),
-                    ProductSalesInfoId: tds.eq(1).html(),
-                    PaymentAmount: tds.eq(7).children('input[type="number"]').val(),
+                     ProductSalesInfoId: tds.eq(1).html(),
+                     PaymentAmount: tds.eq(7).children('input[type="number"]').val(),
 
 
 
                 });
             })
              console.log(details);
-             var info = { PaymentMoneyReciptId: 0, StockiestId: TryParseInt(ddlstokiestname.val(), 0), MoneyReciptNo: txtMoneyRecipt.val(), BankName: $("#ddlBankname option:selected").text(), BranchName: ddlBranch.val(), PaymentMode: ddlPaymentMode.val(), AccounrNumber: ddlAccountNumber.val() };
+             var info = { PaymentMoneyReciptId: 0, StockiestId: TryParseInt(ddlstokiestname.val(), 0), MoneyReciptNo: txtMoneyRecipt.val(), BankName: $("#ddlBankname option:selected").text(), BranchName: ddlBranch.val(), PaymentMode: ddlPaymentMode.val(), AccounrNumber: ddlAccountNumber.val(), CommisionPercent: ddlAmount.val() };
 
              var data = JSON.stringify({ info: info, details: details });
 
-             @*$.when(postReqWithToken(dataType.applicationJson, dataType.json, 'POST', '/AgroConfiguration/SaveSalesReturn', data, getToken())).then(function (res, status) {
+             $.when(postReqWithToken(dataType.applicationJson, dataType.json, 'POST', '/AgroConfiguration/SaveProSalesPayment', data, getToken())).then(function (res, status) {
                  debugger;
                 if (res === true) {
 
                     $('.toastrDefaultSuccess').trigger('click');
                     setTimeout(function () {
-                        redirectPage('@Url.Action("SalesReturnList")');
+                        redirectPage('@Url.Action("SalesPaymentCreate")');
                     }, 1000);
                 }
                 else {
@@ -228,7 +229,7 @@
 
             function redirectPage(page) {
                 window.location.replace(page);
-            }*@
+            }
 
         });
 
