--- a/ERPWeb/Views/AgroConfiguration/CreateFinishGoodRecipe.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateFinishGoodRecipe.cshtml
@@ -292,9 +292,9 @@
 
            // getSourceItemAndItemType();
             var td1 = "<td class='text-center text-bold'>" + (sl + 1) + "</td>"
-            var td2 = "<td>" + dropDownSelectedText("ddlRawMaterialName") + "</td>";
-            var td3 = "<td class='text-center text-bold'>" + txtRawMaterialQty.val() + "</td>";
-            var td4 = "<td class='text-center text-bold'>" + ddlUnitName.val() + "</td>";
+            var td2 = "<td class='text-center'>" + dropDownSelectedText("ddlRawMaterialName") + "</td>";
+            var td3 = "<td class='text-center'>" + txtRawMaterialQty.val() + "</td>";
+            var td4 = "<td class='text-center'>" + ddlUnitName.val() + "</td>";
             var td5 = "<td class='text-center'> <a href='#' class='btn btn-sm btn-danger btn-flat data-onfly-del'><i class='far fa-trash-alt'></i></a></td>";
             var td6 = "<td class='hide RawMaterialId'>" + ddlRawMaterialName.val()+"</td>";
             var td7 = "<td class='hide UnitId'>" + ddlUnitID.val()+"</td>";
