--- a/ERPWeb/Views/AgroConfiguration/GetMRawmaterialIssueList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetMRawmaterialIssueList.cshtml
@@ -207,13 +207,16 @@
                                 <div class="px-2 py-1">
                                     <div class="row text-sm">
                                         @*<div class="col-md-2">
-                                            <h5>Search by:</h5>
-                                        </div>*@
-                                        <div class="col-md-3 float-right">
+            <h5>Search by:</h5>
+        </div>*@
+                                        <div class="col-5">
+
+                                        </div>
+                                        <div class="col-md-2 float-right">
                                             <input type="text" class="form-control form-control-sm" id="searchByAnyy" placeholder="Search by any" />
 
                                         </div>
-                                        <div class="col-7">
+                                        <div class="col-5">
 
                                         </div>
 
