--- a/ERPWeb/Views/AgroConfiguration/GetMeasurementList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetMeasurementList.cshtml
@@ -128,13 +128,16 @@
                                 <div class="px-2 py-1">
                                     <div class="row text-sm">
                                         @*<div class="col-md-2">
-                                            <h5>Search by</h5>
-                                        </div>*@
-                                        <div class="col-md-3 float-left">
+            <h5>Search by</h5>
+        </div>*@
+                                        <div class="col-5">
+
+                                        </div>
+                                        <div class="col-md-2 float-left">
                                             <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search by any" />
 
                                         </div>
-                                        <div class="col-7">
+                                        <div class="col-3">
 
                                         </div>
 
