--- a/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
@@ -114,7 +114,7 @@
                                 <label for="ddlPaymentMode" class="col-form-label pt-0">Payment</label>
                                 <select class="form-control form-control-sm" id="ddlPaymentMode">
                                     <option value="Credit">Credit</option>
-                                    <option value="Cash">Cash</option>
+                                    @*<option value="Cash">Cash</option>*@
                                 </select>
                             </div>
                             <div class="col-md-2">
@@ -243,7 +243,6 @@
                                 <div>
                                     <button type="submit" class="btn btn-sm btn-warning float-right float-md-start text-bold" id="btnAddToList" title="Save"><i class="fas fa-plus"></i></button>
                                 </div>
-
                             </div>
 
                         </div>
