--- a/ERPWeb/Views/AgroConfiguration/ProductCommision.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/ProductCommision.cshtml
@@ -113,13 +113,13 @@
 
                                         <div class="col-md-1">
                                             <label for="credit">Credit(%)</label>
-                                            <input type="number" id="numCredit" name="credit" class="form-control form-control-sm" />
+                                            <input type="number" value="0" id="numCredit" name="credit" class="form-control form-control-sm" />
                                             <span class="error hide req-numCredit">Credit is Required</span>
                                         </div>
 
-                                        <div class="col-md-1">
+                                        <div class="col-md-1 hide">
                                             <label for="cash">Cash(%)</label>
-                                            <input type="number" id="numCash" name="cash" class="form-control form-control-sm" />
+                                            <input type="number" value="0" id="numCash" name="cash" class="form-control form-control-sm" />
                                             <span class="error hide req-numCash">Credit is Required</span>
                                         </div>
                                         <div class="col-md-2">
