--- a/ERPWeb/Views/AgroConfiguration/SalesPaymentCreate.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesPaymentCreate.cshtml
@@ -58,7 +58,7 @@
                             </div>
                             <div class="col-md-2">
                                 <label for="ddlPaymentMode" class="control-label">Payment Mode</label>
-                                <select id="ddlPaymentMode" class="form-control form-control-sm" select2>
+                                <select id="ddlPaymentMode" class="form-control form-control-sm select2" >
                                     <option value="">Select Mode</option>
                                     <option value="Cash">Cash</option>
                                     <option value="Cheque">Cheque</option>
@@ -69,11 +69,6 @@
                                 <label for="ddlAccountNumber" class="control-label">Account Number</label>
                                 <input type="number" id="ddlAccountNumber" class="form-control form-control-sm" />
                                 <span class="error hide req-ddlAccountNumber font-weight-bold">Account is required!</span>
-                            </div>
-                            <div class="col-md-2">
-                                <label for="ddlAmount" class="control-label">Commision(%)</label>
-                                <input type="number" value="0" id="ddlAmount" class="form-control form-control-sm" />
-                                <span class="error hide req-ddlAmount font-weight-bold">Amount is required!</span>
                             </div>
 
 
@@ -129,7 +124,6 @@
         var divAccountNumber = $("#divAccountNumber");
         var ddlPaymentMode = $("#ddlPaymentMode");
         var ddlAccountNumber = $("#ddlAccountNumber");
-        var ddlAmount = $("#ddlAmount");
 
 
 
@@ -195,17 +189,17 @@
              $.each($("#tblAgroSalesProductList tbody tr"), function (index, item) {
                 var tds = $(this).children('td');
                  details.push({
-                    //StockiestId: TryParseInt(ddlStokiestID.val(), 0),
-                    //ProductSalesInfoId: TryParseInt(ddlInvoiceNo.val(), 0),
+
                      ProductSalesInfoId: tds.eq(1).html(),
                      PaymentAmount: tds.eq(7).children('input[type="number"]').val(),
+                     CommisionPercent: tds.eq(8).children('input[type="number"]').val(),
 
 
 
                 });
             })
              console.log(details);
-             var info = { PaymentMoneyReciptId: 0, StockiestId: TryParseInt(ddlstokiestname.val(), 0), MoneyReciptNo: txtMoneyRecipt.val(), BankName: $("#ddlBankname option:selected").text(), BranchName: ddlBranch.val(), PaymentMode: ddlPaymentMode.val(), AccounrNumber: ddlAccountNumber.val(), CommisionPercent: ddlAmount.val() };
+             var info = { PaymentMoneyReciptId: 0, StockiestId: TryParseInt(ddlstokiestname.val(), 0), MoneyReciptNo: txtMoneyRecipt.val(), BankName: $("#ddlBankname option:selected").text(), BranchName: ddlBranch.val(), PaymentMode: ddlPaymentMode.val(), AccounrNumber: ddlAccountNumber.val() };
 
              var data = JSON.stringify({ info: info, details: details });
 
